sirve con mensaje encriptado y mostrado en un input

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="root">
-      <h1>Hola mundo!</h1>
+      <h1>Love is in the air</h1>
       <form >
         <h1>Mensaje</h1>
         <p>¿Escribe lo que deseas?</p>
@@ -15,17 +15,12 @@
         <p>¿Elige el Offset?</p>
         <input type="text" id="offset"><br>
         <a href="#" id="button_encriptar">Encriptar</a>
-        <p id="mensaje_encriptado"></p>
-
+        <a href="#" id= "button_desencriptar">Desencriptar</a>
+        <p>Mensaje que deseas cifrar o descifrar</p>
         
-        <a href="#">enviar</a><br>
 
+        <input type="text" id="mensaje_encriptado"><br>
 
-        <a id= "button_desencriptar"href="#">Desencriptar</a>
-        <p>Mensaje que deseas descifrar</p>
-        <input type="text" id="desencriptar"><br>
-        <a href="#">limpiar</a>
-        <a href="#">enviar</a>
         
       </form>
     </div>
