--- a/src/index.html
+++ b/src/index.html
@@ -10,20 +10,23 @@
     <div id="root">
       <header class="header">
       <h1 class="title_header">Love is in the air</h1>
+      <img class="title_icon" src="img/talk.png" alt="icono">
     </header>
     <section class="content">
       <section class="cifrar">
         <form >
-          <p>¿Escribe lo que deseas?</p>
+          <p class="titles_cifrar">¿Escribe lo que deseas?</p>
           <input type="text" id="text_plano"  placeholder="Mensaje original"><br>
-          <p>¿Elige el Offset?</p>
+          <p class="titles_cifrar">¿Elige el Offset?</p>
           <input type="text" id="offset" placeholder="Ingresa un numero"><br>
-          <a href="#" id="button_encriptar">Encriptar</a>
-          <a href="#" id= "button_desencriptar">Desencriptar</a>
-          <p>Mensaje que deseas cifrar o descifrar</p>
+          <section class="buttons_cipher">
+          <a  class="buttons" href="#" id="button_encriptar">Encriptar</a>
+          <a  class="buttons" href="#" id= "button_desencriptar">Desencriptar</a>
+        </section>
+          <p class="titles_cifrar">Mensaje que deseas cifrar o descifrar</p>
           <input type="text" id="mensaje_encriptado" placeholder="Mensaje encriptado"><br> 
         </form>
-    </section>
+      </section>
     </section>
     </div>
     <script src="index.js"></script>
