--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
       <section class="cifrar">
         <form >
           <p class="titles_cifrar">¿Escribe lo que deseas?</p>
-          <input type="text" id="text_plano"  placeholder="Mensaje original"><br>
+          <textarea  class="resize"  name="" id="text_plano" cols="30" rows="10"></textarea>
           <p class="titles_cifrar">¿Elige el Offset?</p>
           <input type="text" id="offset" placeholder="Ingresa un numero"><br>
           <section class="buttons_cipher">
@@ -24,7 +24,7 @@
           <a  class="buttons" href="#" id= "button_desencriptar">Desencriptar</a>
         </section>
           <p class="titles_cifrar">Mensaje que deseas cifrar o descifrar</p>
-          <input type="text" id="mensaje_encriptado" placeholder="Mensaje encriptado"><br> 
+          <textarea  class="resize" name="" id="mensaje_encriptado" cols="30" rows="10"></textarea>
         </form>
       </section>
     </section>
